[package]
name = "status_lights_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
status_lights_messages = { path = "../status_lights_messages" }
structopt = "0.3.22"
serialport = "4.0.1"
thiserror = "1.0.26"
