[package]
name = "status_lights_neo_trinkey"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6.15"
neo_trinkey = { version = "0.1", features = ["usb"] }
panic-halt = "0.2.0"
status_lights_messages = { path = "../status_lights_messages" }
smart-leds = "0.3.0"
usb-device = "0.2"
usbd-serial = "0.1"
ws2812-timer-delay = { version = "0.3.0", features = ["slow"] }

# Temporary fix for tests not working, fix this by making a lib and separate bin
[[bin]]
name = "status_lights_neo_trinkey"
test=false
